--- a/index.html
+++ b/index.html
@@ -153,21 +153,21 @@
                                     </p> 
                                   </div>
                                   <div class="col">
-                                    <h3><i class="fa-solid fa-heart"></i> título aquí</h3>
+                                    <h3><i class="fa-solid fa-briefcase"></i> We bring emotion</h3>
                                     <p>
                                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                                     </p>
                                   </div>
                                   <div class="col">
-                                    <h3><i class="fa-solid fa-heart"></i> título aquí</h3>
+                                    <h3><i class="fa-solid fa-comment"></i>We guide companies</h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed lacus posuere mauris placerat feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                                     </p>
                                   </div>
                                   <div class="col">
-                                    <h3><i class="fa-solid fa-heart"></i> título aquí</h3>
+                                    <h3><i class="fa-solid fa-heart"></i> We design extraordinary</h3>
                                     <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sed lacus posuere mauris placerat feugiat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+                                        Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                                     </p>
                                   </div>
                                 </div>
