Css Sección con Imagenes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Pricing</a></li>
-                    <li></li><a href="#">Tour</a></li>
+                    <li><a href="#">Tour</a></li>
                     <li><a href="#">Log in</a></li>
                     <li class="singUp"><a href="#">Sing up</a></li>
                 </ul>
@@ -39,6 +39,7 @@
         </div>
     </header>
         <section  class="container_1">
+            <div class="container_col">
                 <div class="col1"> 
                     <i class="fa-solid fa-chart-line"></i>
                     <h3>Business presentation</h3>
@@ -54,65 +55,79 @@
                     <h3>Standout from the crowd</h3>
                     <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                 </div>
-                <button type="send" value="Get started">Get started
+                </div>
+                <button type="send" value="Get started">Get started</button>
             </section>
 
-                <section class="container_2">
-                    <div class="texto-img1">
-                        <h2>We guide companies</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <img src="img/uber.png" alt="uber">
-                        <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-                        <p class="photo_uber">
-                            <img src="img/persona_1.jpg" alt="person">
-                            " Chris Worth, Uber"
-                        </p>
-                        <div class="img uber">
-                            <img src="img/img_showcase_2.jpg" alt="laptop">
+
+                 <section class="container_2">
+                    <div class="imagenTexto1">
+                        <div class="Textoestadistica1">
+                            <h2>We guide companies</h2>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            <figure class="logo-uber">
+                                <img src="img/uber.png" alt="logo-uber">
+                            </figure>
+                            <p><i>“A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.”</p></i>
+                            <p class="persona_1"><i>
+                                <img src="img/persona_1.jpg" alt="uber1">
+                                Chris Worth, Uber</i>
+                            </p>
+                        </div>
+                        <div class="img-Estadistica1">
+                            <img src="img/img_showcase_2.jpg" alt="#1">
+                        </div>
+                    
+                </section>
+                <section class="container_3">
+                    <div class="imagenTexto2">
+                        <div class="imgEstadistica2">
+                            <img src="img/laptop_1.jpg" alt="#2">
+                        </div>
+                        <div class="Textoestadistica2">
+                            <h2>We design extraordinary</h2>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            <figure class="logo-facebook">
+                                <img src="img/facebook.png" alt="logo-facebook">
+                            </figure>
+                            <p><i>“A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.”</p>
+                            <p class="person_2">
+                                <img src="img/person_2.jpg" alt="person2">
+                                Janet Morris, Facebook</i>
+                            </p>
                         </div>
                     </div>
-                 </section>
-
-                 <section class="container_3">
-                    <div class="texto-img2">
-                        <h2>We design extraordinary</h2>
-                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                        <img src="img/facebook.png" alt="facebook">
-                        <p>“A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.”</p>
-                        <p class="photo_facebook">
-                            <img src="img/person_2.jpg" alt="person2">
-                            "  Janet Morris, Facebook"
-                        </p>
-                        <div class="img uber">
-                            <img src="img/laptop_1.jpg" alt="laptop">
-                        </div>   
-                     </section>
-
-                     <section class="container_4">
-                        <div class="texto-img3">
+                </section>
+                <section class="container_4">
+                    <div class="imagenTexto3">
+                        <div class="Textoestadistica3">
                             <h2>We bring emotion to our product</h2>
-                            <p>FFar far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                            <img src="img/twitter.png" alt="twitter">
-                            <p>"A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.”</p>
-                            <p class="photo_twitter">
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                            <figure class="logo-twiter">
+                                <img src="img/twitter.png" alt="logo-twitter" width="20px">
+                            </figure>
+                            <p><i>“A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.”</p>
+                            <p class="person_3">
                                 <img src="img/person_3.jpg" alt="person3">
-                                " Jessa Sy, Twitter"
-                            </p>
-                            <div class="img twitter">
-                                <img src="img/img_showcase_3.jpg" alt="pag">
-                            </div>   
-                         </section>
+                                Jessa Sy, Twitter
+                            </p></i>
+                        </div>
+                        <div class="Img-estadistica3">
+                            <img src="img/img_showcase_3.jpg" alt="#3">
+                        </div>
+                    </div>
+                </section>
 
                          <section class="container_5">
                             <div class="texto">
                             <h1>More Benefits</h1>
-                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
+                            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. </p>
                             </div>
                             <div class="info-cont">
                                 <div class="col">
                                   <h3><i class="fa-solid fa-heart"></i> We bring emotion</h3>
                                   <p>
-                                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+                                    Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
                                   </p>
                                 </div>
                                 <div class="col">
@@ -148,7 +163,7 @@
                         </section>
                           
 
-                              <section class="container_6">
+                              <section class="container_7">
                                 <h2>Our Products</h2>
                                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
 
