--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <a href="index.html" class="logo">Sublime.</a>
             <nav>
                 <ul class="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">Tour</a></li>
                     <li><a href="#">Log in</a></li>
