--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="#">Tour</a></li>
                     <li><a href="#">Log in</a></li>
                     <li class="singUp"><a href="#">Sing up</a></li>
