--- a/pricing.html
+++ b/pricing.html
@@ -49,7 +49,7 @@
             <li>Custom scripting & scheduling</li>
             <li>Payment & accounting software integration</li>
         </ul>
-        <button>Start Free Trial</button>
+        <button type="send" value="Start Free Trial">Start Free Trial</button>
     </div>
     <div class="plan">
         <h3>ADVANCE</h3>
@@ -61,7 +61,7 @@
             <li>Custom scripting & scheduling</li>
             <li>Payment & accounting software integration</li>
         </ul>
-        <button>Start Free Trial</button>
+        <button type="send" value="Start Free Trial">Start Free Trial</button>
     </div>
     <div class="plan">
         <h3>BUSINESS</h3>
@@ -72,6 +72,34 @@
             <li>Custom scripting & scheduling</li>
             <li>Payment & accounting software integration</li>
         </ul>
-        <button>Start Free Trial</button>
+        <button type="send" value="Start Free Trial">Start Free Trial</button>
+    </div>
+</section>
+
+<section class="preguntas">
+    <div class="text-center3">
+        <h2>Frequently Ask Question</h2>
+    </div>
+    <div class="info-cont4">
+        <div class="col3">
+            <h3>What is sublime?</h3>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.<br><br></p>
+        </div>
+        <div class="col3">
+            <h3>Is it free?</h3>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.<br><br></p>
+        </div>
+        <div class="col3">
+            <h3>Can I use this template?</h3>
+            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.<br><br></p>
+        </div>
+        <div class="col3">
+            <h3>Do you do a custom work?</h3>
+            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.<br><br></p>
+        </div>
+        <div class="col3">
+            <h3>What is the license?</h3>
+            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.<br><br></p>
+        </div>
     </div>
 </section>
