--- a/pricing.html
+++ b/pricing.html
@@ -17,14 +17,14 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="#">Tour</a></li>
+                    <li><a href="tour.html">Tour</a></li>
                     <li><a href="#">Log in</a></li>
                     <li class="singUp"><a href="#">Sing up</a></li>
                 </ul>
             </nav>
             <section class="Textobanner">
                 <div class="titulo">
-                    <h1>Choose your subscription plan</h1>
+                    <h1>Choose your <br>Subscription plan</h1>
                     <h2>A modern type of website template for your new<br>business brought to you by
                         <a href="https://uicookies.com/">uicookies.com</a>
                     </h2>
