--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="#">Tour</a></li>
+                    <li><a href="tour.html">Tour</a></li>
                     <li><a href="#">Log in</a></li>
                     <li class="singUp"><a href="#">Sing up</a></li>
                 </ul>
