Realización del Log In

--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="tour.html">Tour</a></li>
-                    <li><a href="#">Log in</a></li>
+                    <li><a href="Log-in.html">Log in</a></li>
                     <li class="singUp"><a href="#">Sing up</a></li>
                 </ul>
             </nav>
