--- a/pricing.html
+++ b/pricing.html
@@ -19,7 +19,7 @@
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="tour.html">Tour</a></li>
                     <li><a href="Log-in.html">Log in</a></li>
-                    <li class="singUp"><a href="#">Sing up</a></li>
+                    <li class="singUp"><a href="singup.html">Sing up</a></li>
                 </ul>
             </nav>
             <section class="Textobanner">
